istio/backend-app.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-app-v3
  labels:
    app: backend-app-v3
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
      version: v3
  template:
    metadata:
      labels:
        app: backend-app
        version: v3
    spec:
      containers:
      - name: sample-backend-app
        image: bijukunjummen/sample-backend-app:0.0.3-SNAPSHOT
        ports:
        - name: http
          containerPort: 8080
