istio/client-app-service.yml
kind: Service
apiVersion: v1
metadata:
  name: client-app-service
  labels:
    app: client-app
spec:
  type: LoadBalancer
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: client-app
