istio/backend-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-destination-rule
spec:
  host: backend-app-service
  trafficPolicy:
          #    connectionPool:
          #tcp:
          # maxConnections: 1
          # http:
          # http1MaxPendingRequests: 1
          # maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 30s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
      # enforcingConsecutive5xx: 100
