istio/backend-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-virtual-service
spec:
  hosts:
  - backend-app-service
  http:
  - route:
    - destination:
        host: backend-app-service
    timeout: 2s
